# pelagica

./: .dockerignore  .gitignore  Dockerfile  LICENSE-code.txt  README.md  app.py  dev.sh  fly.toml  pyproject.toml  test_wiki.py  utils.py  weekly_winners.csv
.github/: CODEOWNERS
about/: index.html
assets/: 00_animation_bridge.js  01_browser_scale.js  01_browser_zoom_lock.js  02_mobile-scale.js  02_system_dpi_lock.js  10_mobile_init.js  depth_audio_bridge.js  depthanimation.js  descent.js  index.html  logging.js  mobile-scale.js  style.css
assets/background_animation/: anim.html  depthanimation.js  fragment.js  index.html  layer3.xcf  style.css  tile_images_and_serve.py
assets/background_animation/anotherversion/: depthanimation.js  index.html  style.css
assets/css/: custom.css  fonts.css  mobile.css
assets/species/chat/: Acanthemblemaria_mangognatha.json  Acanthonus_armatus.json  Actinopyga_caerulea.json  Aethia_cristatella.json  Ambystoma_mexicanum.json  Amphiprion_ocellaris.json  Anampses_caeruleopunctatus.json  Architeuthis_dux.json  Argyropelecus_affinis.json  Asterias_rubens.json  Balaenoptera_musculus.json  Balaenoptera_physalus.json  Bathynomus_giganteus.json  Bolinopsis_infundibulum.json  Carapus_acus.json  Carcharodon_carcharias.json  (+69 more)
cache/: wiki_exists.json
data/processed/: .~lock.popular_species.csv#  .~lock.transparency_blacklist.csv#  common_name_overrides.txt  common_names_taxa.csv  fav_events.csv  fav_state.csv  popular_species.csv  transparency_blacklist.csv  weekly_winners.csv
depth_viewer/: depthanimation.js  index.html  messages.json  style.css  sw.js  tile_images_and_serve.py
src/: enrich_with_wiki.py  fetch_data.py  image_cache.py  process_data.py  query_gbif_for_pelagica.ipynb  taxonomic_tree.py  text_cache.py  utils.py  wiki.py
src/fav_utils/: routes_fav.py  scoring.py  utils_time.py
(+19 files in other folders)
