[project]
name = "pelagica"
version = "0.1.0"
description = ""
authors = [
    {name = "victoria-tiki",email = "victoria.t.tiki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (>=3.1.1,<4.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "rpy2 (>=3.6.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
