[tool.poetry]
name = "pelagica"
version = "0.1.0"
description = "The Aquatic Life Atlas"
authors = ["victoria-tiki <victoria.t.tiki@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dash = "^2.14"
dash-bootstrap-components = "^1.5"
pandas = ">=2.3.1,<3.0.0"
numpy = ">=1.24,<2.3"
requests = ">=2.32.4,<3.0.0"
#rpy2 = ">=3.6.1,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
scipy = ">=1.16.0,<2.0.0"
onnxruntime = "^1.17.3"
plotly = "^5.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

